[gd_scene load_steps=13 format=1]

[ext_resource path="res://fundo/mudaEstradaCorrompida.gd" type="Script" id=1]
[ext_resource path="res://fundo/ceu/bck_ceuSinistro.png" type="Texture" id=2]
[ext_resource path="res://fundo/montanhas/bck_montanhasP1Sinistra.png" type="Texture" id=3]
[ext_resource path="res://fundo/estrada/bck_estradaP1Sinistra.png" type="Texture" id=4]
[ext_resource path="res://fundo/ativaChuva.gd" type="Script" id=5]
[ext_resource path="res://interface/HUD/particulas/chuvaMaisOuMenos.png" type="Texture" id=6]
[ext_resource path="res://recursos de base/Rain OGG/2.ogg" type="AudioStream" id=7]
[ext_resource path="res://fundo/ceu/ceu.tscn" type="PackedScene" id=8]
[ext_resource path="res://fundo/ceu/ceu16_9.png" type="Texture" id=9]
[ext_resource path="res://fundo/montanhas/montanhas.tscn" type="PackedScene" id=10]
[ext_resource path="res://fundo/estrada/estrada.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=2]

resource/name = "chuva"
length = 3.5
loop = true
step = 0.1

[node name="Fundo" type="Node2D"]

z/z = -10
script/script = ExtResource( 1 )
ceuCorrompido = ExtResource( 2 )
montanhasCorrompidas = ExtResource( 3 )
estradaCorrompida = ExtResource( 4 )

[node name="camadas" type="Node2D" parent="."]

[node name="chuva" type="Node2D" parent="camadas"]

script/script = ExtResource( 5 )

[node name="chuva3" type="Particles2D" parent="camadas/chuva"]

transform/pos = Vector2( 987.402, 12.7166 )
config/amount = 1020
config/lifetime = 2.8
config/preprocess = 1.0
config/emitting = false
config/process_mode = 0
config/half_extents = Vector2( 2000, 0 )
config/texture = ExtResource( 6 )
params/direction = -45.0
params/spread = 7.0
params/linear_velocity = 500.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 20.0
params/initial_angle = -45.0
params/initial_size = 1.5
params/final_size = 1.25
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 5.0
randomness/hue_variation = 0.03
color/color = Color( 0.343536, 0.090271, 0.679688, 1 )

[node name="chuva1" type="Particles2D" parent="camadas/chuva"]

transform/pos = Vector2( 987.402, 12.7166 )
config/amount = 1020
config/lifetime = 2.8
config/preprocess = 1.0
config/emitting = false
config/process_mode = 0
config/half_extents = Vector2( 2000, 0 )
config/texture = ExtResource( 6 )
params/direction = -45.0
params/spread = 7.0
params/linear_velocity = 500.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 20.0
params/initial_angle = -45.0
params/initial_size = 1.5
params/final_size = 1.25
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 5.0
randomness/hue_variation = 0.03
color/color = Color( 0.343536, 0.090271, 0.679688, 1 )

[node name="chuva2" type="Particles2D" parent="camadas/chuva"]

transform/pos = Vector2( 987.402, 12.7166 )
config/amount = 1020
config/lifetime = 2.8
config/preprocess = 1.0
config/emitting = false
config/process_mode = 0
config/half_extents = Vector2( 2000, 0 )
config/texture = ExtResource( 6 )
params/direction = -45.0
params/spread = 7.0
params/linear_velocity = 500.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 20.0
params/initial_angle = -45.0
params/initial_size = 1.5
params/final_size = 1.25
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 5.0
randomness/hue_variation = 0.03
color/color = Color( 0.343536, 0.090271, 0.679688, 1 )

[node name="StreamPlayer" type="StreamPlayer" parent="camadas/chuva"]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ceu" parent="camadas" instance=ExtResource( 8 )]

editor/display_folded = true

[node name="determinaTextura" parent="camadas/ceu"]

textura16_9 = ExtResource( 9 )

[node name="montanhas" parent="camadas" instance=ExtResource( 10 )]

velocidadeMedia = 10

[node name="estrada" parent="camadas" instance=ExtResource( 11 )]

velocidadeMedia = 15

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/chuva = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "chuva"


[editable path="camadas/ceu"]
[editable path="camadas/ceu/ceuUnidade"]
